--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev src/server.ts",
     "typeorm ": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
-  "dependencies": {
+  "dependencies": { 
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "pg": "^8.7.1",
@@ -16,11 +17,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
-  
 }
