--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "npx tsc ",
+    "start": "node ./dist.js",
     "dev": "ts-node-dev src/server.ts",
     "typeorm ": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
