--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "npx tsc ",
-    "start": "node ./dist.js",
+    "start": "node ./dist/server.js",
     "dev": "ts-node-dev src/server.ts",
     "typeorm ": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
